fixing find us section on narrow viewports

--- a/index.css
+++ b/index.css
@@ -173,9 +173,7 @@ td {
 /*Find us section */
 
 #findUs {
-padding-top:1.5rem;  
-padding-left: 10.5rem;
-padding-right: 10.5rem;
+padding-top:1.5rem; 
 background-color: #fdf1e2;
 }
 
